--- a/src/app/crud-usuarios/crud-usuarios.component.html
+++ b/src/app/crud-usuarios/crud-usuarios.component.html
@@ -1,28 +1,22 @@
-<h3 [ngStyle]="{ 'margin-bottom.px': 16 }">Default Size</h3>
-<nz-list nzBordered nzHeader="Header" nzFooter="Footer">
-  <nz-list-item *ngFor="let item of data">
-    <span nz-typography><mark>[ITEM]</mark></span>
-    {{ item }}
-  </nz-list-item>
-</nz-list>
-
-<h3 [ngStyle]="{ margin: '16px 0' }">Small Size</h3>
-<nz-list nzBordered nzSize="small">
-  <nz-list-header>Header</nz-list-header>
-  <nz-list-item *ngFor="let item of data">item</nz-list-item>
-  <nz-list-footer>Footer</nz-list-footer>
-</nz-list>
-
-<h3 [ngStyle]="{ margin: '16px 0' }">Large Size</h3>
-<ul nz-list [nzDataSource]="data" nzBordered nzSize="large">
-  <nz-list-header>Header</nz-list-header>
-  <li nz-list-item *ngFor="let item of data" nzNoFlex>
-    <ul nz-list-item-actions>
-      <nz-list-item-action>
-        <a (click)="msg.info('edit')">edit</a>
-      </nz-list-item-action>
-    </ul>
-    {{ item }}
-  </li>
-  <nz-list-footer>Footer</nz-list-footer>
-</ul>
+<nz-table #basicTable [nzData]="listOfData">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Age</th>
+      <th>Address</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let data of basicTable.data">
+      <td>{{ data.name }}</td>
+      <td>{{ data.age }}</td>
+      <td>{{ data.address }}</td>
+      <td>
+        <a>Action 一 {{ data.name }}</a>
+        <nz-divider nzType="vertical"></nz-divider>
+        <a>Delete</a>
+      </td>
+    </tr>
+  </tbody>
+</nz-table>
