--- a/src/app/crud-mecanicos/crud-mecanicos.component.html
+++ b/src/app/crud-mecanicos/crud-mecanicos.component.html
@@ -12,10 +12,10 @@
       <button style="margin-right: 10px" (click)="getUsuariosFilter()">
         Buscar
       </button>
-      <button (click)="setShowForm()">Agregar nuevo</button>
+      <button (click)="setShowForm()">Agregar nueva cita</button>
     </div>
 
-    <div>
+    <!-- <div>
       <label for="">Sede: </label>
       <select
         name=""
@@ -28,7 +28,7 @@
           {{ sede.nombre }}
         </option>
       </select>
-    </div>
+    </div> -->
   </div>
 
   <hr />
