--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,28 +1,32 @@
 <nz-layout>
-    <nz-sider nzCollapsible nzWidth="200px">
-      <div class="logo"></div>
-      <ul nz-menu nzTheme="dark" nzMode="inline">
-        <li nz-menu-item routerLink="/usuarios">
-          <span nz-icon nzType="pie-chart"></span>
-          <span>Usuarios</span>
-        </li>
-        <li nz-menu-item routerLink="/vehiculos">
-          <span nz-icon nzType="desktop"></span>
-          <span>Vehiculos</span>
-        </li>
-      </ul>
-    </nz-sider>
-    <nz-layout>
-      <nz-header></nz-header>
-      <nz-content>
-        <nz-breadcrumb>
-          <nz-breadcrumb-item>User</nz-breadcrumb-item>
-          <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
-        </nz-breadcrumb>
-        <div class="inner-content">
-          <router-outlet></router-outlet>
-        </div>
-      </nz-content>
-      <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
-    </nz-layout>
+  <nz-sider nzCollapsible nzWidth="200px">
+    <div class="logo"></div>
+    <ul nz-menu nzTheme="dark" nzMode="inline">
+      <li nz-menu-item routerLink="/usuarios">
+        <span nz-icon nzType="pie-chart"></span>
+        <span>Usuarios</span>
+      </li>
+      <li nz-menu-item routerLink="/vehiculos">
+        <span nz-icon nzType="desktop"></span>
+        <span>Vehiculos</span>
+      </li>
+      <li nz-menu-item routerLink="/mecanicos">
+        <span nz-icon nzType="desktop"></span>
+        <span>Mecanicos</span>
+      </li>
+    </ul>
+  </nz-sider>
+  <nz-layout>
+    <nz-header></nz-header>
+    <nz-content>
+      <nz-breadcrumb>
+        <nz-breadcrumb-item>User</nz-breadcrumb-item>
+        <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
+      </nz-breadcrumb>
+      <div class="inner-content">
+        <router-outlet></router-outlet>
+      </div>
+    </nz-content>
+    <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
   </nz-layout>
+</nz-layout>
